# xconv2

./: .gitignore  LICENSE  README.md  cfview_plot_code.py  environment-integration.yml  environment.yml  pyinstaller_gui_entry.py  pyinstaller_worker_entry.py  pyproject.toml  xconv2.spec
.github/workflows/: build-and-deploy-on-pypi.yml  pytest.yml
cfview/: proto_gui.py
data/: test2.pp
docs/: assets-attribution.md
docs/architecture/: core_window_refactor.md  remote_cache_and_pruning.md  remote_navigation_and_worker_warmup.md
docs/uml/: alpha_core_window.puml  core_window_gui_worker_signals.puml  core_window_options_sequence.puml  core_window_phase1.puml  core_window_phase2.puml  core_window_phase3.puml  core_window_phase3_gui_worker_signals.puml  core_window_phase3_options_sequence.puml  remote_access_module.puml  remote_worker_warmup_sequence.puml
src/cf_view/: cf_templates.py  colour_scales.py  core_window.py  gui.py  (+2 more)
tests/: conftest.py  test_cf_interface.py  test_contour.py  test_contour_options_dialog.py  test_coordinate_flow.py  test_https_nginx_integration.py  test_lineplot.py  test_load_selected_file.py  test_log_viewer_dialog.py  test_pyfive_remote_s3_cache.py  test_remote_access.py  test_remote_auth_flow.py  test_remote_configuration_dialog.py  test_remote_file_navigator.py  test_remote_fs.py  test_selection_controller.py  test_settings_store.py  test_worker_remote_integration.py  test_worker_remote_tasks.py  test_worker_save_script.py
tools/: probe_fs_cache.py  pyfive_local_probe.py
xconv2/: __init__.py  cache_utils.py  cell_method_handler.py  cf_templates.py  colour_scales.py  core_window.py  gui.py  lineplot.py  logging_utils.py  main_window.py  plot_layout_helpers.py  remote_access.py  remote_fs.py  tooltips.py  worker.py  xconv_cf_interface.py
(+24 files in other folders)
