[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "cfv2"
version = "0.2.0a1"
description = "High-performance data viewer and simple data converter"
requires-python = ">=3.12"
dependencies = [
    "PySide6",
    "superqt",
    "cf-python",
    "cf-plot",
    "fsspec",
    "s3fs",
    "paramiko",
    "zarr",
    "pandas",
    "setuptools>80",
]

[project.optional-dependencies]
test = [
    "pytest",
    "docker",
    "minio",
]

[project.gui-scripts]
# This creates an 'xconv2' command that launches your GUI
xconv2 = "xconv2.gui:main"

[project.scripts]
# This creates a 'cf-worker' command for the backend process
cf-worker = "xconv2.worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xconv2*"]

[tool.setuptools.package-data]
xconv2 = ["assets/*.svg", "assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]